--- a/index.html
+++ b/index.html
@@ -7,18 +7,11 @@
     <link rel="stylesheet" href="./preview.css" />
     <link rel="stylesheet" href="./mediaStyle.css" />
 
-    <script defer type="module" src="./scripts/constants.js"></script>
-    <script defer type="module" src="./scripts/components.js"></script>
-    <script defer type="module" src="./scripts/helpers/debounce.js"></script>
     <script
       defer
       type="module"
-      src="./scripts/helpers/createCollectionList.js"
+      src="./dist/my-first-webpack.bundle.js"
     ></script>
-    <script defer type="module" src="./scripts/helpers/getElements.js"></script>
-    <script defer type="module" src="./scripts/helpers/urls.js"></script>
-    <script defer type="module" src="./scripts/mock.js"></script>
-    <script defer type="module" src="./scripts/index.js"></script>
   </head>
   <body>
     <div id="app"></div>
