--- a/index.html
+++ b/index.html
@@ -3,15 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Movie and Series Finder</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="./preview.css" />
-    <link rel="stylesheet" href="./mediaStyle.css" />
-
-    <script
-      defer
-      type="module"
-      src="./dist/my-first-webpack.bundle.js"
-    ></script>
+    <link rel="stylesheet" href="./dist/homeStyle.css" />
+    <script defer src="./dist/home.bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
